<resources>
    <string name="app_name">MediSrout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Reset</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_share">Share</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="settings">Settings</string>
    <string name="current_username">Current username</string>
    <string name="current_number_of_added_patients">Current number of added patients</string>
    <string name="max_number_of_patients_allowed">Max number of patients allowed</string>
    <string name="save">Save</string>
</resources>